# GraphicsEngine

./: .gitattributes  .gitignore  CMakeLists.txt  GraphicsEngine_NOTES.txt  README  build.sh  compileShaders.sh  setupShaders.sh
LibGraphicsEngine/: CMakeLists.txt  LibGraphicsEngine.sln  LibGraphicsEngine.vcxproj  LibGraphicsEngine.vcxproj.filters
LibGraphicsEngine/dep/include/KHR/: khr_df.h
LibGraphicsEngine/dep/include/gl/: glext.h  wglext.h
LibGraphicsEngine/dep/lib/32bit/: vulkan-1.lib
LibGraphicsEngine/res/shaders/VisualEffects/LitEffects/: debugShadowRT.frag  debugShadowRT.vert  lit2DTexture.frag  litColor.frag  litColor.vert  litColorAttribute.frag  litColorAttribute.vert  litEnvironmentMappingTexture.vert  litEnvironmentMappingTextureReflect.frag  litEnvironmentMappingTextureRefract.frag  litMirrorTexture.frag  litMirrorTexture.vert  litShadowColorAttribute.frag  litShadowColorAttribute.vert  litShadowCompute.vert
LibGraphicsEngine/res/shaders/VisualEffects/UnlitEffects/: unlit2DTexture.frag  unlit2DTexture.vert  unlit2DTextureArray.frag  unlit2DTextureArray.vert  unlitColor.frag  unlitColor.vert  unlitColorAttribute.frag  unlitColorAttribute.vert  unlitCubemapTexture.frag  unlitCubemapTexture.vert
LibGraphicsEngine/res/textures/: stonefloor01_normal_rgba.ktx2
LibGraphicsEngine/src/: AppConfig.hpp  Engine.cpp  Engine.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  GraphicsEngineInternal.cpp  GraphicsEngineInternal.hpp  System.cpp  System.hpp
LibGraphicsEngine/src/Applications/: Application.cpp  Application.hpp  ConsoleApplication.cpp  ConsoleApplication.hpp  WindowApplication.cpp  WindowApplication.hpp
LibGraphicsEngine/src/Core/: AppConfig.hpp  Engine.cpp  Engine.hpp  GraphicsEngine.hpp  GraphicsEngineInternal.cpp  GraphicsEngineInternal.hpp  System.cpp  System.hpp
LibGraphicsEngine/src/Foundation/: DefaultClass.hpp  DynamicSingleton.hpp  FileUtils.cpp  FileUtils.hpp  FixedSingleton.hpp  HashUtils.hpp  Logger.hpp  NoCopyNoMove.hpp  NoCopyNoMoveClass.hpp  Object.cpp  Object.hpp  RTTI.hpp  Singleton.hpp  Timer.cpp  Timer.hpp  TypeDefines.hpp  TypeDefs.hpp  Variant.cpp  Variant.hpp
LibGraphicsEngine/src/Foundation/MemoryManagement/: Allocator.hpp  LiniarAllocator.cpp  LiniarAllocator.hpp  MemoryBenchmark.cpp  MemoryBenchmark.hpp  MemoryOperations.cpp  MemoryOperations.hpp  MemoryUtility.cpp  MemoryUtility.hpp
LibGraphicsEngine/src/Foundation/Platform/: InputDef.hpp  InputMacros.hpp  Platform.cpp  Platform.hpp  PlatformInternal.cpp  PlatformInternal.hpp  PlatformTypes.hpp
LibGraphicsEngine/src/Foundation/Platform/GLLoader/: GLLoader.cpp  GLLoader.hpp
LibGraphicsEngine/src/Foundation/Platform/Win32/: Win32App.hpp  Win32Platform.cpp  Win32Platform.hpp  Win32Types.hpp
LibGraphicsEngine/src/Graphics/: GraphicsSystem.cpp  GraphicsSystem.hpp
LibGraphicsEngine/src/Graphics/Camera/: Camera.cpp  Camera.hpp  FPSCamera.cpp  FPSCamera.hpp
LibGraphicsEngine/src/Graphics/Cameras/: Camera.cpp  Camera.hpp  FPSCamera.cpp  FPSCamera.hpp
LibGraphicsEngine/src/Graphics/Components/: MaterialComponent.cpp  MaterialComponent.hpp  NodeComponent.cpp  NodeComponent.hpp  VisualComponent.cpp  VisualComponent.hpp
LibGraphicsEngine/src/Graphics/GeometricPrimitives/: GeometricPrimitive.cpp  GeometricPrimitive.hpp
LibGraphicsEngine/src/Graphics/Lights/: DirectionalLight.cpp  DirectionalLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp
LibGraphicsEngine/src/Graphics/Loaders/: KTX2Loader.cpp  KTX2Loader.hpp  glTF2Loader.cpp  glTF2Loader.hpp
LibGraphicsEngine/src/Graphics/Rendering/: RenderQueue.cpp  RenderQueue.hpp  Renderer.cpp  Renderer.hpp
LibGraphicsEngine/src/Graphics/Rendering/PipelineStates/: AlphaState.cpp  AlphaState.hpp  ColorBlendState.cpp  ColorBlendState.hpp  CullFaceState.cpp  CullFaceState.hpp  DepthState.cpp  DepthState.hpp  DepthStencilState.cpp  DepthStencilState.hpp  DynamicState.cpp  DynamicState.hpp  PipelineState.cpp  PipelineState.hpp
LibGraphicsEngine/src/Graphics/SceneGraph/: CameraNode.cpp  CameraNode.hpp  GeometryNode.cpp  GeometryNode.hpp  GroupNode.cpp  GroupNode.hpp  LightNode.cpp  LightNode.hpp  Node.cpp  Node.hpp
LibGraphicsEngine/src/Input/: InputSystem.cpp  InputSystem.hpp
SampleApplications/: CMakeLists.txt  SampleApplications.sln
SampleApplications/EnvironmentMapping/: CMakeLists.txt  Main.cpp
SampleApplications/EnvironmentMapping/res/models/: cube.gltf  venus.gltf
SampleApplications/EnvironmentMapping/res/shaders/: litmodel.vert  reflect.frag  refract.frag  skybox.vert
SampleApplications/EnvironmentMapping/res/textures/: cubemap.ktx2
SampleApplications/LitModels/: CMakeLists.txt  Main.cpp
SampleApplications/LitModels/res/models/: armor.gltf  colormap_rgba.ktx2
SampleApplications/LitModels/res/shaders/: litmodel.frag  litmodel.vert
SampleApplications/Models/: CMakeLists.txt  Main.cpp
SampleApplications/Models/res/models/: vulkanscenemodels.gltf
SampleApplications/Models/res/shaders/: model.frag  model.frag.spv  model.vert  model.vert.spv
SampleApplications/Offscreen/: CMakeLists.txt  Main.cpp
SampleApplications/Offscreen/res/models/: chinesedragon.gltf  suzanne.gltf
SampleApplications/Offscreen/res/shaders/: litmodel.frag  litmodel.vert  mirror.frag  mirror.vert
SampleApplications/Shadows/: CMakeLists.txt  Main.cpp
SampleApplications/Shadows/res/models/: torusknot.gltf  vulkanscene_shadow.gltf
SampleApplications/TexturedCubes/: CMakeLists.txt  Main.cpp
SampleApplications/TexturedCubes/res/shaders/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  cubeTextureArray.frag  cubeTextureArray.frag.spv  cubeTextureArray.vert  cubeTextureArray.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
SampleApplications/TexturedCubes/res/textures/: cubemap.ktx2  cubemap_yokohama_rgba.ktx2  texturearray_rgba.ktx2  vulkan_11_rgba.ktx2
SampleApplications/Triangle/: CMakeLists.txt  Main.cpp  Triangle.vcxproj  Triangle.vcxproj.filters
SampleApplications/Triangle/res/shaders/: triangle.frag  triangle.vert  triangle.vert.spv
(+329 files in other folders)
