cmake_minimum_required(VERSION 3.14)

# subdirectories
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Triangle)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/TexturedCubes)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Models)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/LitModels)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentMapping)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Offscreen)